finish index subkompetensi
