# app/Models/SubKompetensi.php
@@ -3,9 +3,16 @@
 namespace App\Models;
 
 use Illuminate\Database\Eloquent\Factories\HasFactory;
-use Illuminate\Database\Eloquent\Model;
 
 class SubKompetensi extends MainModel
 {
     use HasFactory;
+
+         /**
+     * Get asesmen
+     */
+    public function kompetensi()
+    {
+        return $this->belongsTo(Kompetensi::class);
+    }
 }
