# public/docs/openapi.yaml
@@ -26,23 +26,23 @@ paths:
                 name:
                   type: string
                   description: 'Must not be greater than 255 characters.'
-                  example: zdwsppqzuhae
+                  example: lidxz
                 nidn_npm:
                   type: string
                   description: ''
-                  example: repudiandae
+                  example: at
                 email:
                   type: string
                   description: 'Must be a valid email address. Must not be greater than 255 characters.'
-                  example: gibson.isai@example.com
+                  example: hkreiger@example.net
                 telepon:
                   type: string
                   description: 'Must be at least 10 characters. Must not be greater than 13 characters.'
-                  example: ygilxjoxxrcg
+                  example: jizdpqgu
                 password:
                   type: string
                   description: ''
-                  example: et
+                  example: id
               required:
                 - name
                 - nidn_npm
@@ -69,11 +69,11 @@ paths:
                 email:
                   type: string
                   description: 'Must be a valid email address.'
-                  example: summer04@example.net
+                  example: kub.aleen@example.org
                 password:
                   type: string
                   description: ''
-                  example: 'HH,B*&DfykYdN'
+                  example: '07Nw*9~Y@'
               required:
                 - email
                 - password
@@ -125,7 +125,7 @@ paths:
         in: path
         name: mata_kuliah_uuid
         description: ''
-        example: 7db6c361-dc78-3c94-98fa-d3d2c8c23d4f
+        example: 3560d681-57ea-32c5-b9c0-f2f9fce1a789
         required: true
         schema:
           type: string
@@ -155,7 +155,37 @@ paths:
         in: path
         name: asesmen_uuid
         description: ''
-        example: 570932f7-5f38-39e4-a05e-74df9bfa947b
+        example: 39e8dded-37fa-370d-9c96-678615918a7b
+        required: true
+        schema:
+          type: string
+  '/api/subkompetensi/{kompetensi_uuid}':
+    get:
+      summary: Kompetensi
+      operationId: kompetensi
+      description: 'Get Kompetensi data'
+      parameters: []
+      responses:
+        401:
+          description: ''
+          content:
+            application/json:
+              schema:
+                type: object
+                example:
+                  message: Unauthenticated.
+                properties:
+                  message:
+                    type: string
+                    example: Unauthenticated.
+      tags:
+        - Endpoints
+    parameters:
+      -
+        in: path
+        name: kompetensi_uuid
+        description: ''
+        example: 4e86f2ee-3dcc-3bff-880e-f66b27099c9d
         required: true
         schema:
           type: string
